fixed issues with getStrategy and putRevision
