# src/schemas/strategy_schema.js
@@ -1,6 +1,6 @@
 import mongoose from 'mongoose';
 
-const { Schema } = mongoose.Schema;
+const { Schema } = mongoose;
 
 const strategySchema = new Schema({
   name: { type: String, trim: true, required: 'name is required' },
@@ -8,8 +8,9 @@ const strategySchema = new Schema({
   createdTime: { type: Date, default: Date.now },
   isActive: { type: Boolean, default: true },
   postedBy: { type: Schema.Types.ObjectId, required: 'postedBy is required' },
-  strategyRevisions: [{ type: Schema.Types.ObjectId, ref: 'StrategyRevisions' }],
+  strategyRevisions: [{ type: Schema.Types.ObjectId, ref: 'strategy_revisions' }],
 });
-mongoose.connect(process.env.MONGO_DB, { autoIndex: false });
-const Strategy = mongoose.model('Strategy', strategySchema);
+
+mongoose.connect(process.env.MONGO_DB, { autoIndex: false, useNewUrlParser: true });
+const Strategy = mongoose.model('strategies', strategySchema);
 export default Strategy;
